# xdp

./: .gitignore  README.md  pyproject.toml
experiments/1/: experiment1.py  test1+2.html  test1.md  test2.md
experiments/2/: experiment2.py  test.html  test.md
experiments/3/: test-immutable.py
experiments/4-intercept-imports/: record-imports.py
experiments/5-static-dependency/: example.py  list-dependencies.py
experiments/5-static-dependency/eg/: __init__.py
xdp/: __init__.py
