[tool.poetry]
name = "xdp"
version = "0.1.0"
description = ""
authors = ["Dane Austin <dane_austin@fastmail.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
pandocfilters = "^1.4.3"

[tool.poetry.dev-dependencies]
spyder-kernels = "^1.10.1"
ipython = "^7.20.0"
pyzo = "^4.11.2"
PyQt5 = "^5.15.2"
matplotlib = "^3.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
